Added new stuff for style

--- a/hill.html
+++ b/hill.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
 
+  <style>
+    p{
+      margin: 50px;
+      font-size: 20px;
+      font-family:comic-sans;
+    }
+
+  </style>
+
   <head>
-
-
     <title>Hill Starts</title>
   </head>
   <body>
+    <center>
     <h1> Hill Starts </h1>
-    <p>
-      I admit the hardest part of learning to drive a manual would be the hill starts. In an automatic, all you have to do is press the gas pedal, but in a manual you will roll back a couple of inches before you start moving up the hill. It is like a rocking chair. When you first lean back in a chair, you get scared from how far it goes back, but in the end you will come back up to an upright position. The teen will have moments of shock or fear like when suddenly pulled back in a rocking chair, but after some practice your teen will be going up the hill comfortably-relaxed as if they were in a lazyboy. There are also many ways to learn how to hill start; some people use their handbrake to help them stay in place, and then release the handbrake to start moving forward. Little tricks like this make a daunting task seem less scary and more possible to learn!
-    <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/mWh5BW-XwtM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+      </iframe>
+    </center>
+    <div>
+      <p>
+        I admit the hardest part of learning to drive a manual would be the hill starts. In an automatic, all you have to do is press the gas pedal, but in a manual you will roll back a couple of inches before you start moving up the hill. It is like a rocking chair. When you first lean back in a chair, you get scared from how far it goes back, but in the end you will come back up to an upright position. The teen will have moments of shock or fear like when suddenly pulled back in a rocking chair, but after some practice your teen will be going up the hill comfortably-relaxed as if they were in a lazyboy. There are also many ways to learn how to hill start; some people use their handbrake to help them stay in place, and then release the handbrake to start moving forward. Little tricks like this make a daunting task seem less scary and more possible to learn!
+      </p>
+   </div>
     <br>
     <button onclick=goBack();> Go Back </button>
   </body>
