--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+  p{
+    margin: 50px;
+    font-size: 20px;
+    font-family:comic-sans;
+  }
+
+</style>
+
   <head>
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <title> ENGLISH ESSAY </title>
   </head>
+
+
+
   <body>
   <center>
     <h1>Adults should teach their kids how to drive manual cars</h1>
   </center>
-
+  <div>
   <p>
     Your child wakes you up… with excitement on their face. You get in the car with your child. Looking down at your teen, you see them anxious and fiddling their thumbs. Both of you are traveling down the road with anticipation in your gut... finally get there. With their social security and birth certificate in hand, they walk up to the desk—after a 2 hour wait. “I am here to take my permit test.” The receptionist tells them to pull out a waiting ticket and tells them to wait. With eyes glued on the ceiling, you finally see their number. Getting up with quick agility, they say, “It is my turn.” The receptionist takes them to the back to take the test. They come out with a smile on your face. THEY PASSED. You are happy, but a moment later  your stomach drops… You need to start thinking about the type of car they are going to drive.
 This can be a crazy moment for adults. Many adults first think about getting an automatic car for their child, but this should not be the case.  In the United States, teenagers think of driving a stick shift—manual transmission car—as a foreign skill. I believe that more parents should break that stigma and teach them how to drive a manual car.
   </p>
+</div>
   <h2> How to operate. Click on the circles and then their website to see why you should teach your child on a manual car.</h2>
   <h1 id="website"></h1>
 
