--- a/offroad.html
+++ b/offroad.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+  p{
+    margin: 50px;
+    font-size: 20px;
+    font-family:comic-sans;
+  }
+
+</style>
+
   <head>
 
 
@@ -8,9 +17,11 @@
   </head>
   <body>
     <h1>Increased fun while offroading</h1>
+    <div>
     <p>
       Not only are manuals fun on the road, but they are also fun off the road. A manual car is a lot better for off roading. While offroading, a person needs precision and complete control, which you can get from a manual car.  In a manual car the driver will be able to choose which gear to be in, giving you “a better sense of control over your car” (“Driving”). This will help going up/down hill and along a trail when off roading. Not only will you be gaining complete control, but the teen will be actively engaged while driving. While off roading there will be a lot of times where you need to switch gears. If the car did everything for you, you would just be sitting there pushing the brake and accelerator, but with a manual the teen will be constantly moving and thinking ahead. By being engaged, the teen is more likely to resist the boredom that is bound to come with an automatic when off roading.
-    <p>
+    </p>
+  </div>
     <br>
     <button onclick=goBack();> Go Back </button>
   </body>
