--- a/works.html
+++ b/works.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+  p{
+    margin: 50px;
+    font-size: 20px;
+    font-family:comic-sans;
+  }
+
+</style>
+
   <head>
 
 
@@ -10,6 +19,7 @@
   <center>
     <h1> Works Citeds </h1>
   </center>
+  <div>
     <p>
       “Analysis & Projections - U.S Energy Information Administration.” <i>U.S Energy Information. Administration</i> , U.S Department of Energy , 05 Jan. 2017. Web. 04. Nov. 2017. <br><br>
 “Driving a stick shift? Pros and cons of cars with manual transmissions.” <i>Daily News Auto.</i>, New York Daily News, 25 Jan. 2013. Web. 17. Oct. 2017.<br><br>
@@ -19,6 +29,7 @@ Pickrell Timothy, Li Ruby. “Distracted Driving | NHTSA” <i>National Highway 
 Popely, Rick. “Are Manual Transmissions Cheaper to Repair and Maintain Than Automatics?” <i>Cars.com</i>, Cars.com, 08 June. 2016. Web. 14. Nov. 2017.<br><br>
 “Report: Only 18 Percent Of Americans Can Drive Manual.” <i>CBS DC</i>, CBS DC, 12 Oct. 2016.Web. 17. Oct. 2017.
     </p>
+  </div>
     <br>
     <button onclick=goBack();> Go Back </button>
   </body>
