--- a/aware.html
+++ b/aware.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+  <style>
+    p{
+      margin: 50px;
+      font-size: 20px;
+      font-family:comic-sans;
+    }
+
+  </style>
+
   <head>
 
 
@@ -9,9 +18,11 @@
   <body>
     <h1> SAFETY </h1>
     <h2>More Alert</h2>
+   <div>
     <p>
       This unique ability also keeps you less distracted on the road. Distracted driving, "In 2015... 3,477 people were killed, and 391,000 were injured" (Pickrell). The number one distraction for teens is being on their cell phone. This is because in an automatic you are able to drive with one hand, which allows an automatic to be less engaging. In a manual, you will be more engaged because you are constantly moving, switching gears, and thinking ahead; a teen will not have anytime to look at their phone. Driving a stick shift will reduce the chance you have of getting distracted since you are so busy shifting and focusing on the road. By getting rid of the distraction-the cell phone-we are able to save many more lives and reduce the amounts of accidents on the road. With a manual keeping your teen engaged it will keep you from getting worried.
     <p>
+    </div>
     <br>
     <button onclick=goBack();> Go Back </button>
   </body>
