--- a/hard.html
+++ b/hard.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+  <style>
+    p{
+      margin: 50px;
+      font-size: 20px;
+      font-family:comic-sans;
+    }
+
+  </style>
+
   <head>
 
 
@@ -8,9 +17,11 @@
   </head>
   <body>
     <h1> "But it is too hard to drive" </h1>
+    <div>
     <p>
       Your teen is going to say something along the lines of it being too hard to drive. A manual car is known for the fact that it does come with a bigger learning curve compared to their automatic counterparts (“Driving”). But with an arsenal of ways to learn how to drive a manual car—videos, driving schools, instructions, yourself—and a little persistence, the teen should be able to learn within a week. Personally, when I first started to learn, I constantly stalled. One time at Walmart, I stalled my car nine times in a row before getting on the road again. That was when I first started to drive, but with help from my dad and online youtube tutorials, I was able to get on the road without stalling within the next week. I was able to learn how to drive the manual car within a week because I constantly had practice.
     <p>
+    </div>
     <br>
     <button onclick=goBack();> Go Back </button>
   </body>
