--- a/works.html
+++ b/works.html
@@ -21,12 +21,12 @@
   </center>
   <div>
     <p>
-      “Analysis & Projections - U.S Energy Information Administration.” <i>U.S Energy Information. Administration</i> , U.S Department of Energy , 05 Jan. 2017. Web. 04. Nov. 2017. <br><br>
-“Driving a stick shift? Pros and cons of cars with manual transmissions.” <i>Daily News Auto.</i>, New York Daily News, 25 Jan. 2013. Web. 17. Oct. 2017.<br><br>
-Fleming, Charles. “The disappearing stick shift: Less than 3% of cars sold in the U.S. have manual transmissions.” <i>Los Angeles Times</i>, Los Angeles Times, 15 Nov. 2016. Web. 1.<br><br> &nbsp; &nbsp; &nbsp; &nbsp;Nov. 2017.<br><br>
-“Manual vs. automatic transmission: save money A stick shift can save you gas and money, if you get one.” <i>Consumer Reports.</i>, Consumer Reports, June. 2017. Web. 17 Oct. 2017 <br><br>
-Pickrell Timothy, Li Ruby. “Distracted Driving | NHTSA” <i>National Highway Traffic Safety Administration</i>, United States Department of Transportation, Sept. 2016. Web. 04. Nov.<br><br> &nbsp; &nbsp; &nbsp; &nbsp;2017.<br><br>
-Popely, Rick. “Are Manual Transmissions Cheaper to Repair and Maintain Than Automatics?” <i>Cars.com</i>, Cars.com, 08 June. 2016. Web. 14. Nov. 2017.<br><br>
+      “Analysis & Projections - U.S Energy Information Administration.” <i>U.S Energy Information. Administration</i> , U.S Department of Energy ,<br><br>&nbsp; &nbsp; &nbsp; &nbsp; 05 Jan. 2017. Web. 04. Nov. 2017. <br><br>
+“Driving a stick shift? Pros and cons of cars with manual transmissions.” <i>Daily News Auto.</i>, New York Daily News, 25 Jan. 2013. Web. 17.<br><br>&nbsp; &nbsp; &nbsp; &nbsp; Oct. 2017.<br><br>
+Fleming, Charles. “The disappearing stick shift: Less than 3% of cars sold in the U.S. have manual transmissions.” <i>Los Angeles Times</i>, Los<br><br>&nbsp; &nbsp; &nbsp; &nbsp; Angeles Times, 15 Nov. 2016. Web. 1.Nov. 2017.<br><br>
+“Manual vs. automatic transmission: save money A stick shift can save you gas and money, if you get one.” <i>Consumer Reports.</i>, Consumer<br><br>&nbsp; &nbsp; &nbsp; &nbsp; Reports, June. 2017. Web. 17 Oct. 2017 <br><br>
+Pickrell Timothy, Li Ruby. “Distracted Driving | NHTSA” <i>National Highway Traffic Safety Administration</i>, United States Department of<br><br>&nbsp; &nbsp; &nbsp; &nbsp; Transportation, Sept. 2016. Web. 04. Nov.2017.<br><br>
+Popely, Rick. “Are Manual Transmissions Cheaper to Repair and Maintain Than Automatics?” <i>Cars.com</i>, Cars.com, 08 June. 2016. Web.<br><br>&nbsp; &nbsp; &nbsp; &nbsp; 14. Nov. 2017.<br><br>
 “Report: Only 18 Percent Of Americans Can Drive Manual.” <i>CBS DC</i>, CBS DC, 12 Oct. 2016.Web. 17. Oct. 2017.
     </p>
   </div>
