--- a/hard.html
+++ b/hard.html
@@ -16,7 +16,11 @@
     <title>Harder To Drive</title>
   </head>
   <body>
-    <h1> "But it is too hard to drive" </h1>
+    <center>
+      <h1> "But it is too hard to drive" </h1>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/a2ixu1jXLf4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+      </iframe>
+    </center>
     <div>
     <p>
       Your teen is going to say something along the lines of it being too hard to drive. A manual car is known for the fact that it does come with a bigger learning curve compared to their automatic counterparts (“Driving”). But with an arsenal of ways to learn how to drive a manual car—videos, driving schools, instructions, yourself—and a little persistence, the teen should be able to learn within a week. Personally, when I first started to learn, I constantly stalled. One time at Walmart, I stalled my car nine times in a row before getting on the road again. That was when I first started to drive, but with help from my dad and online youtube tutorials, I was able to get on the road without stalling within the next week. I was able to learn how to drive the manual car within a week because I constantly had practice.
