--- a/initial.html
+++ b/initial.html
@@ -16,7 +16,9 @@
     <title>Initial Costs</title>
   </head>
   <body>
+    <center>
     <h1> Initial Cost are Lower </h1>
+  </center>
     <div>
     <p>
       Manual cars are cheaper right from the start. When you first buy a car, a manual “can cut a car’s price by $800 to $1200” (“Manual”). Manual cars do not have all the extra mechanics and code that allow a car to shift itself; this allows car dealerships to sell them at a lower price. Since the car dealership sells them at a lower price, it gives you the better deal. You will also have piece of mind because your teen will get the same safety features as the automatic, but at a cheaper price. If you decide to buy a manual car, you will end up with around $1000 saved in the bank account, making it more affordable for the teen to pay you back in the near future.
