--- a/gas.html
+++ b/gas.html
@@ -16,7 +16,9 @@
     <title>Save money on gas</title>
   </head>
   <body>
+    <center>
     <h1> Gas Money </h1>
+  </center>
     <div>
     <p>
       Manual cars are more fuel efficient than automatics. With the rising prices of gas, saving around 5 miles of gas per gallon is a big deal ("Manual"). Gas prices, on average,  in 2015 was $2.43, in 2016 was $2.15, in 2017 is $2.40, and in 2018 predicted to be $2.45 as seen in the figure to the right ("Analysis"). With the steady rise in gas prices, it would be good to buy a car that gives your teen better miles per gallon. Today, gas prices are $2.50, 5 miles per gallon saves you around $12 dollars per month. This means your child can have a sense of responsibility and pay for their own gas, while still saving around an hours worth of pay.
