--- a/maintanance.html
+++ b/maintanance.html
@@ -16,7 +16,9 @@
     <title>Maintanance</title>
   </head>
   <body>
+    <center>
     <h1> Cheaper on Maintanance </h1>
+  </center>
     <div>
     <p>
       Let’s be honest. You are going to be paying for the repairs on your child’s car. Compared to automatics, stick shifts do not need as much maintenance. On stick shifts, the only maintenance needed is on the clutch which happens “hundreds of thousands of miles” down the road (“Driving”). This means that you are able to spend more time on the road, instead of at repair shops. Another place you will see cheaper maintenance is on fluid changes. Both manual and automatic cars need regular fluid changes, but on an automatic the replacement cost around $100 to $200; “in a manual it costs about half that”(Popely). Which helps with your pocketbook because you will be saving $50 to $100 every time you need regular maintenance on the car. Even when they need the same maintenance, the manual car is the cheaper option. You will be saving money throughout the life of the car.
