--- a/unique.html
+++ b/unique.html
@@ -16,8 +16,9 @@
     <title>Unique</title>
   </head>
   <body>
-    <h1> SAFETY </h1>
-    <h2>Unique skill to have</h2>
+    <center>
+    <h1>Unique skill to have</h1>
+  </center>
     <div>
     <p>
       By driving a manual your teen will gain an unique ability not many others have. 1 in 54 students at Waukee high school drive a manual. This means that about 2% of teens drive a manual car, and 18% of all Americans can drive a manual car (“Report”). The figure to the right shows that there is a decreasing amount of cars sold with a manual transmission in the United states. With such a such a unique ability, this means your child will be the only one driving the car. Your teenager is bound to be with his or her friends most of their high school years. You may have peace of mind when the teenager is out because he will be the only one driving the car. The teen’s friends are less likely to take the car and mess around with it, leaving you confident in your teenager being safe and wise with their car.
