--- a/offroad.html
+++ b/offroad.html
@@ -16,8 +16,12 @@
     <title>Offroading</title>
   </head>
   <body>
+    <button onclick=goBack();> Go Back </button>
     <center>
     <h1>Increased fun while offroading</h1>
+<iframe src="https://giphy.com/embed/mbXsJdt6cFchW" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen>
+</iframe>
+
   </center>
     <div>
     <p>
@@ -25,7 +29,7 @@
     </p>
   </div>
     <br>
-    <button onclick=goBack();> Go Back </button>
+
   </body>
   <script>
     function goBack(){
