--- a/overseas.html
+++ b/overseas.html
@@ -15,20 +15,21 @@
   </head>
 
   <body>
+    <button onclick=goBack();> Go Back </button>
     <center>
     <h1> Can drive overseas</h1>
-    <iframe src="https://www.facebook.com/video/embed?video_id=1483584678364735/" width="220" height= "400px">
+    <iframe src="https://www.facebook.com/video/embed?video_id=1483584678364735/" width="220" height= "400px" frameborder="0" gesture="media" allowfullscreen>
     </iframe>
 
   </center>
     <div>
     <p>
-      The skill of driving manuals are much more apparent overseas. By learning how to drive a manual, your teen will be able to learn how to drive virtually anywhere. It is said that 80% of the cars in Europe and Asia are manual transmission (Fleming). Your child will be able to experience the entire culture of the country they are visiting, opposed to riding in a tour bus or a car that the majority of people do not drive in that country—an automatic. This also means that you can experience the country from the back seat instead of the drivers position.  I had this experience last summer in India. I visited a few times before, but this time was the first time I was able to drive there. It was a unique experience. I was able to experience the way drivers traveled around, and the differences in driving in America and overseas. For example driving on the right side of the car, left side of the road, and the different driving conditions. By submerging in the everyday culture of India, it was one of the most enjoyable and a memorable visits.
+      The skill of driving manuals are much more apparent overseas. By learning how to drive a manual, your teen will be able to learn how to drive virtually anywhere. It is said that 80% of the cars in Europe and Asia are manual transmission (Fleming). Your child will be able to experience the entire culture of the country they are visiting, opposed to riding in a tour bus or a car that the majority of people do not drive in that country—an automatic. This also means that you can experience the country from the back seat instead of the drivers position.  I had this experience last summer in India. I visited a few times before, but this time was the first time I was able to drive there. It was a unique experience. I was able to experience the way drivers traveled around, and the differences in driving in America and overseas. For example driving on the right side of the car, left side of the road, and the different driving conditions. By submerging in the everyday culture of India, it was one of the most enjoyable and a memorable visits. Above is an example of the streets of India.
 
     </p>
    </div>
     <br>
-    <button onclick=goBack();> Go Back </button>
+
   </body>
   <script>
     function goBack(){
